Fix Overflow v2

--- a/assets/scss/pages/_screen_4.scss
+++ b/assets/scss/pages/_screen_4.scss
@@ -35,6 +35,7 @@
       z-index: 2;
       z-index: 10;
       padding: 70% 0 0 0;
+      overflow: hidden;
     }
 
     &-toptext {
